# CodeJam

./: .gitignore  README.md  cnn_stuff.py  create_gestures.py  inference_classifier.py  model.p  pyproject.toml
Code/: Rotate_images.py  cnn_model_keras2.h5  cnn_model_train.py  create_gestures.py  final.py  gesture_db.db  hist  test_images  test_labels  train_images  train_labels  val_images  val_labels
backend/: README.md  one_hand_data.pickle  pyproject.toml  run_app.sh  two_hands_data.pickle
backend/src/: app.py  get_llm_response.py  prompts.py  streamlit_app.py
backend/src/ai/: get_llm_response.py  prompts.py
backend/src/config/: asl.json  asl_letters.json  asl_one_hand.json  asl_words_one_hand.json  asl_words_two_hands.json  signs_config.json
backend/src/templates/: index.html
backend/src/util/: collect_imgs.py  create_dataset.py  create_dataset_models.py  data.pickle  inference_classifier.py  model_switch.py  modelsmodel_one_hand.p  modelsmodel_two_hands.p  one_hand_data.pickle  train_classifier.py  two_hands_data.pickle  unified_inference.py
backend/src/util/models/: model_letters.p  model_numbers.p  model_one_hand.p  model_two_hands.p  model_words_two_hands.p  motion_model.h5  motion_model_best.h5  motion_model_metadata.pkl
backend/src/util/motion/: check_dataset.py  create_dataset_motion.py  inference_motion.py  setup_motion_detection.py  train.md  train_motion_classifier.py
backend/src/util/static/: collect_imgs.py  create_dataset_models.py  inference_classifier.py  model_switch.py  train_classifier.py
frontend/: README.md
src/: app.py
(+16 files in other folders)
