[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codejam-backend"
version = "0.1.0"
description = "Backend API for CodeJam project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "mediapipe>=0.10.21",
    "openai[realtime]>=2.8.0",
    "scikit-learn>=1.6.1",
    "toll>=4.2.1",
    "tool>=0.8.0",
    "streamlit>=1.28.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
